# rivett

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  db.rs  formats.rs  image_loader.rs  lib.rs  main.rs  metadata.rs  session.rs  settings.rs  viewer.rs
wix/: License.rtf  main.wxs
